# invisible-hand

./: .gitignore  README.md  install.ps1  pyproject.toml
invisible-hand/: database_requests.py  hand.py  keypress.py  main.py  ocr_processor.py  ocr_tool.py  screenread.py  server_info.py  startup.py  state_machine.py
